Fix #2 rules lightbox overflow for mobiles and laptops

--- a/css/main.css
+++ b/css/main.css
@@ -90,10 +90,11 @@ and (max-device-width: 800px) {
 	}
 	
 	#rules {
-		padding: 20px 0;
-		width: 250px;
+		padding: 20px 10px;
+		width: 240px;
 		margin: 0 auto;
-		overflow: scroll;
+		max-height: 100%;
+		overflow-y: scroll;
 	}
 	
 	#rules > p {
@@ -268,9 +269,11 @@ and (min-device-width: 801px) {
 	}
 	
 	#rules {
-		padding: 20px 0;
+		padding: 20px;
 		width: 600px;
 		margin: 0 auto;
+		max-height: 100%;
+		overflow-y: scroll;
 	}
 	
 	#rules > p {
